add per-platform image code to website

--- a/thunderbird.net/en-US/index.html
+++ b/thunderbird.net/en-US/index.html
@@ -9,7 +9,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-javascript
+
     <title>Thunderbird — Software made to make email easier. — Mozilla</title>
     <meta name="description" content="Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!">
     <meta property="og:type" content="website">
@@ -149,7 +149,7 @@ javascript
     </div>
   </div>
   <div id="thunderbird-screenshot">
-    /media/thunderbird/landing/screenshot.png
+    <img class="platform-img js" src="" data-processed="false" data-src-mac="/media/img/l10n/en-US/thunderbird/landing/screenshot-mac.png" data-high-res="true" data-src-linux-high-res="/media/img/l10n/en-US/thunderbird/landing/screenshot-linux-high-res.png" data-src-mac-high-res="/media/img/l10n/en-US/thunderbird/landing/screenshot-mac-high-res.png" data-src-windows="/media/img/l10n/en-US/thunderbird/landing/screenshot-windows.png" data-src-windows-high-res="/media/img/l10n/en-US/thunderbird/landing/screenshot-windows-high-res.png" alt="Thunderbird screenshot" data-src-linux="/media/img/l10n/en-US/thunderbird/landing/screenshot-linux.png"><noscript><img class="platform-img win" src="/media/img/l10n/en-US/thunderbird/landing/screenshot-windows.png" data-src-mac="/media/img/l10n/en-US/thunderbird/landing/screenshot-mac.png" data-high-res="true" data-src-linux-high-res="/media/img/l10n/en-US/thunderbird/landing/screenshot-linux-high-res.png" data-src-mac-high-res="/media/img/l10n/en-US/thunderbird/landing/screenshot-mac-high-res.png" data-src-windows="/media/img/l10n/en-US/thunderbird/landing/screenshot-windows.png" data-src-windows-high-res="/media/img/l10n/en-US/thunderbird/landing/screenshot-windows-high-res.png" alt="Thunderbird screenshot" data-src-linux="/media/img/l10n/en-US/thunderbird/landing/screenshot-linux.png"></noscript>
   </div>
 </main>
 
