Add wordmark images and rebuild thunderbird.net

--- a/thunderbird.net/en-US/index.html
+++ b/thunderbird.net/en-US/index.html
@@ -208,7 +208,7 @@
             <ul class="links-join">
               <li><a href="" data-link-type="footer" data-link-name="About">About</a></li>
               <li class="wrap"><a href="" data-link-type="footer" data-link-name="Contact Us">Contact Us</a></li>
-              <li class="wrap"><a href="https://donate.mozilla.org/en-US/?presets=100,50,25,15&amount=50&ref=EOYFR2015&utm_campaign=EOYFR2015&utm_source=mozilla.org&utm_medium=referral&utm_content=footer&currency=usd" class="donate" data-link-type="footer" data-link-name="Donate">Donate</a></li>
+              <li class="wrap"><a href="https://donate.mozilla.org/en-US/thunderbird/?presets=100,50,25,15&amount=50&ref=EOYFR2015&utm_campaign=EOYFR2015&utm_source=thunderbird.net&utm_medium=referral&utm_content=footer&currency=usd" class="donate" data-link-type="footer" data-link-name="Donate">Donate</a></li>
               <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org" data-link-type="footer" data-link-name="Contribute to this site">Contribute to this site</a></li>
             </ul>
 
