add partial product details loading code, fix download buttons and url generation, and regenerate site

--- a/thunderbird.net/ff/index.html
+++ b/thunderbird.net/ff/index.html
@@ -154,7 +154,7 @@
   <div class="nojs-download">
     
   <div class="download download-dumb">
-    <h4>Download Thunderbird — Pulaar-Fulfulde</h4>
+    <h4>Download Thunderbird — English (US)</h4>
     <ul>
       <li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=winsha1&lang=en-US" class="download-link button button-green">Windows (XP/Vista)</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=win&lang=en-US" class="download-link button button-green">Windows</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=osx&lang=en-US" class="download-link button button-green">macOS</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=linux&lang=en-US" class="download-link button button-green">Linux</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=linux64&lang=en-US" class="download-link button button-green">Linux 64-bit</a></li>
     </ul>
@@ -164,7 +164,7 @@
   <div class="unrecognized-download">
     
   <div class="download download-dumb">
-    <h4>Download Thunderbird — Pulaar-Fulfulde</h4>
+    <h4>Download Thunderbird — English (US)</h4>
     <ul>
       <li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=winsha1&lang=en-US" class="download-link button button-green">Windows (XP/Vista)</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=win&lang=en-US" class="download-link button button-green">Windows</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=osx&lang=en-US" class="download-link button button-green">macOS</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=linux&lang=en-US" class="download-link button button-green">Linux</a></li><li><a href="https://download.mozilla.org/?product=thunderbird-52.1.1-SSL&os=linux64&lang=en-US" class="download-link button button-green">Linux 64-bit</a></li>
     </ul>
