--- a/thunderbird.net/fi/channel/index.html
+++ b/thunderbird.net/fi/channel/index.html
@@ -137,7 +137,7 @@
 
       
   <header id="main-feature">
-    <h1>Welcome to the <strong>Future of Thunderbird</strong></h1>
+    <h1>Tervetuloa <strong>Thunderbirdin tulevaisuuteen</strong></h1>
     <h2>Download Earlybird or Thunderbird Beta and be one of the first to try the newest features in the next version of Thunderbird! By giving us your feedback, you’ll help make email better for millions of your fellow users.</h2>
   </header>
 
