--- a/thunderbird.net/en-US/thunderbird/52.1.1/releasenotes/index.html
+++ b/thunderbird.net/en-US/thunderbird/52.1.1/releasenotes/index.html
@@ -144,7 +144,7 @@
   
     <header class="notes-head">
     <h1>Thunderbird  Notes</h1>
-    <h2>Version 52.1.1, first offered to  channel users on </h2>
+    <h2>Version 52.1.1, first offered to  channel users on May 15, 2017</h2>
 
       <p>
         Check out "What’s New" and "Known Issues" for this version of Thunderbird below.
