--- a/thunderbird.net/en-US/thunderbird/52.0/system-requirements/index.html
+++ b/thunderbird.net/en-US/thunderbird/52.0/system-requirements/index.html
@@ -144,19 +144,58 @@
 
   <div id="main-content">
     <article class="main-column">
-        <p>Windows   Operating Systems
-<em> Windows XP SP3 * Windows Server 2003 SP1 * Windows Server 2003 R2 * Windows Server 2008 * Windows Server 2008 R2 * Windows Vista * Windows 7 * Windows 8 * Windows 10
-Please note that while the 32-bit and 64-bit versions of Windows Vista and Windows 7 can be used to run Thunderbird, only 32-bit builds of Thunderbird are supported at this time.
-Note that Thunderbird 52 is the last release to support Windows XP, Windows Server 2003, Windows Server 2003 R2, Windows 2008 and Windows Vista. Windows Recommended Hardware
-</em> Pentium 4 or newer processor that supports SSE2 * 1GB RAM * 200 MB hard drive space
-Mac Operating Systems
-<em> Mac OS X 10.9 * Mac OS X 10.10 * Mac OS X 10.11 * Mac OS X 10.12
-Recommended Hardware
-</em> Macintosh computer with an Intel x86 processor * 512 MB RAM * 200 MB hard drive space
-GNU/Linux Software Requirements
-Please note that Linux distributors may provide packages for your distribution which have different requirements. Software Requirements
-Please note that GNU/Linux distributors may provide packages for your distribution which have different requirements.
-<em> Thunderbird will not run at all without the following libraries or packages: <strong> GTK+ 3.4 or higher </strong> GLib 2.22 or higher <strong> Pango 1.14 or higher </strong> X.Org 1.0 or higher (1.7 or higher is recommended) <strong> libstdc++ 4.6.1 or higher </strong> PulseAudio   * For optimal functionality, we recommend the following libraries or packages: <strong> NetworkManager 0.7 or higher </strong> DBus 1.0 or higher </em>* GNOME 2.16 or higher</p>
+        <p><strong>System Requirements:</strong><br> • <strong>Window: Windows XP, Windows Server 2003 or later</strong><br> • <strong>Mac: Mac OS X 10.9 or later</strong><br> • <strong>Linux: GTK+ 3.4 or higher</strong><br> Details <a href="https://www.mozilla.org/en-US/thunderbird/52.0/system-requirements/">here</a>.
+<strong>Please refer to <a href="https://www.mozilla.com/en-US/thunderbird/52.0/releasenotes/">Release Notes for version 52.0</a> to see the list of improvements and fixed issues.</strong></p>
+<p>======================================================================================================</p>
+<h2>Windows</h2>
+<h3>Operating Systems</h3>
+<ul>
+<li>Windows XP SP3</li>
+<li>Windows Server 2003 SP1</li>
+<li>Windows Server 2003 R2</li>
+<li>Windows Server 2008</li>
+<li>Windows Server 2008 R2</li>
+<li>Windows Vista</li>
+<li>Windows 7</li>
+<li>Windows 8</li>
+<li>Windows 10</li>
+</ul>
+<p><em>Please note that while the 32-bit and 64-bit versions of Windows Vista and Windows 7 can be used to run Thunderbird, only 32-bit builds of Thunderbird are supported at this time.</em>
+<strong>Note that Thunderbird 52 is the last release to support Windows XP, Windows Server 2003, Windows Server 2003 R2, Windows 2008 and Windows Vista.</strong></p>
+<h3>Windows Recommended Hardware</h3>
+<ul>
+<li>Pentium 4 or newer processor that supports SSE2</li>
+<li>1GB RAM</li>
+<li>200 MB hard drive space</li>
+</ul>
+<hr />
+<h2>Mac</h2>
+<h3>Operating Systems</h3>
+<ul>
+<li>Mac OS X 10.9 - Mac OS X 10.10 - Mac OS X 10.11 - Mac OS X 10.12</li>
+</ul>
+<h3>Recommended Hardware</h3>
+<ul>
+<li>Macintosh computer with an Intel x86 processor</li>
+<li>512 MB RAM</li>
+<li>200 MB hard drive space</li>
+</ul>
+<hr />
+<h2>GNU/Linux ### Software Requirements</h2>
+<p><em>Please note that Linux distributors may provide packages for your distribution which have different requirements.</em></p>
+<h3>Software Requirements</h3>
+<p><em>Please note that GNU/Linux distributors may provide packages for your distribution which have different requirements.</em>
+- Thunderbird will not run at all without the following libraries or packages:
+    - GTK+ 3.4 or higher
+    - GLib 2.22 or higher
+    - Pango 1.14 or higher
+    - X.Org 1.0 or higher (1.7 or higher is recommended)
+    - libstdc++ 4.6.1 or higher
+    - PulseAudio
+- For optimal functionality, we recommend the following libraries or packages:
+    - NetworkManager 0.7 or higher
+    - DBus 1.0 or higher
+    - GNOME 2.16 or higher</p>
     </article>
   </div>
   
