More release notes editing.

--- a/thunderbird.net/en-US/thunderbird/52.0/releasenotes/index.html
+++ b/thunderbird.net/en-US/thunderbird/52.0/releasenotes/index.html
@@ -160,8 +160,7 @@
 • Window: Windows XP, Windows Server 2003 or later<br />
 • Mac: Mac OS X 10.9 or later<br />
 • Linux: GTK+ 3.4 or higher</strong><br />
-Details <a href="https://thunderbird.net/en-US/thunderbird/52.0/system-requirements/">here</a>.</p>
-<p><strong>Please refer to <a href="https://thunderbird.net/en-US/thunderbird/52.0/releasenotes/">Release Notes for version 52.0</a> to see the list of improvements and fixed issues.</strong></p>
+Details <a href="/en-US/thunderbird/52.0/system-requirements/">here</a>.</p>
       </p>
     </header>
   
