--- a/thunderbird.net/en-US/thunderbird/52.1.1/system-requirements/index.html
+++ b/thunderbird.net/en-US/thunderbird/52.1.1/system-requirements/index.html
@@ -144,10 +144,7 @@
 
   <div id="main-content">
     <article class="main-column">
-        <p><strong>System Requirements:</strong><br> • <strong>Window: Windows XP, Windows Server 2003 or later</strong><br> • <strong>Mac: Mac OS X 10.9 or later</strong><br> • <strong>Linux: GTK+ 3.4 or higher</strong><br> Details <a href="https://www.mozilla.org/en-US/thunderbird/52.0/system-requirements/">here</a>.
-<strong>Please refer to <a href="https://www.mozilla.com/en-US/thunderbird/52.0/releasenotes/">Release Notes for version 52.0</a> to see the list of improvements and fixed issues.</strong></p>
-<p>======================================================================================================</p>
-<h2>Windows</h2>
+        <h2>Windows</h2>
 <h3>Operating Systems</h3>
 <ul>
 <li>Windows XP SP3</li>
@@ -160,8 +157,8 @@
 <li>Windows 8</li>
 <li>Windows 10</li>
 </ul>
-<p><em>Please note that while the 32-bit and 64-bit versions of Windows Vista and Windows 7 can be used to run Thunderbird, only 32-bit builds of Thunderbird are supported at this time.</em>
-<strong>Note that Thunderbird 52 is the last release to support Windows XP, Windows Server 2003, Windows Server 2003 R2, Windows 2008 and Windows Vista.</strong></p>
+<p><em>Please note that while the 32-bit and 64-bit versions of Windows Vista and Windows 7 can be used to run Thunderbird, only 32-bit builds of Thunderbird are supported at this time.</em></p>
+<p><strong>Note that Thunderbird 52 is the last release to support Windows XP, Windows Server 2003, Windows Server 2003 R2, Windows 2008 and Windows Vista.</strong></p>
 <h3>Windows Recommended Hardware</h3>
 <ul>
 <li>Pentium 4 or newer processor that supports SSE2</li>
@@ -172,7 +169,10 @@
 <h2>Mac</h2>
 <h3>Operating Systems</h3>
 <ul>
-<li>Mac OS X 10.9 - Mac OS X 10.10 - Mac OS X 10.11 - Mac OS X 10.12</li>
+<li>Mac OS X 10.9</li>
+<li>Mac OS X 10.10</li>
+<li>Mac OS X 10.11</li>
+<li>Mac OS X 10.12</li>
 </ul>
 <h3>Recommended Hardware</h3>
 <ul>
@@ -181,21 +181,26 @@
 <li>200 MB hard drive space</li>
 </ul>
 <hr />
-<h2>GNU/Linux ### Software Requirements</h2>
-<p><em>Please note that Linux distributors may provide packages for your distribution which have different requirements.</em></p>
+<h2>GNU/Linux</h2>
 <h3>Software Requirements</h3>
-<p><em>Please note that GNU/Linux distributors may provide packages for your distribution which have different requirements.</em>
-- Thunderbird will not run at all without the following libraries or packages:
-    - GTK+ 3.4 or higher
-    - GLib 2.22 or higher
-    - Pango 1.14 or higher
-    - X.Org 1.0 or higher (1.7 or higher is recommended)
-    - libstdc++ 4.6.1 or higher
-    - PulseAudio
-- For optimal functionality, we recommend the following libraries or packages:
-    - NetworkManager 0.7 or higher
-    - DBus 1.0 or higher
-    - GNOME 2.16 or higher</p>
+<p><em>Please note that GNU/Linux distributors may provide packages for your distribution which have different requirements.</em></p>
+<ul>
+<li>Thunderbird will not run at all without the following libraries or packages:<ul>
+<li>GTK+ 3.4 or higher</li>
+<li>GLib 2.22 or higher</li>
+<li>Pango 1.14 or higher</li>
+<li>X.Org 1.0 or higher (1.7 or higher is recommended)</li>
+<li>libstdc++ 4.6.1 or higher</li>
+<li>PulseAudio</li>
+</ul>
+</li>
+<li>For optimal functionality, we recommend the following libraries or packages:<ul>
+<li>NetworkManager 0.7 or higher</li>
+<li>DBus 1.0 or higher</li>
+<li>GNOME 2.16 or higher</li>
+</ul>
+</li>
+</ul>
     </article>
   </div>
   
