Remove copy paste error from release notes index.

--- a/website/thunderbird/releases/index.html
+++ b/website/thunderbird/releases/index.html
@@ -54,7 +54,7 @@
         </ol>
       </li>
     </ol>
-  </div>3.0/releasenotes/
+  </div>
 {% endblock %}
 
 {% macro get_link(int_version, version) %}
