Fix Learn More link to correct section of wiki.

--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -43,7 +43,7 @@
           <h2>{{ _('Other ways to contribute to Thunderbird') }}</h2>
           <p>
              {{ _('Now is a great time for you to get involved: writing code, testing, support, localization and more. Join a global community! Share your skills and pick up a few new ones along the way. Volunteer as much as you like. Or as little. It’s totally up to you.') }}
-              <a class="more" href="https://wiki.mozilla.org/Thunderbird">{{ _('Learn more') }}</a>
+              <a class="more" href="https://wiki.mozilla.org/Thunderbird#Contributing">{{ _('Learn more') }}</a>
              </p>
         </section>
       </div>
