Fix release notes links on localized pages.

--- a/website/thunderbird/releases/index.html
+++ b/website/thunderbird/releases/index.html
@@ -69,6 +69,6 @@
   {%- elif int_version < 31 -%}
     <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/{{ version }}/releasenotes/">{{ version }}</a>
   {%- else -%}
-    <a href="../{{ version }}/releasenotes/">{{ version }}</a>
+    <a href="../../../en-US/{{ version }}/releasenotes/">{{ version }}</a>
   {%- endif -%}
 {% endmacro %}
