Made the language even more concise, implementing feedback from issue #23

--- a/website/channel/index.html
+++ b/website/channel/index.html
@@ -16,7 +16,7 @@
  {% block content %}
    <header id="main-feature">
      <h1>{{ _('Welcome to the <strong>Future of Thunderbird</strong>') }}</h1>
-     <h2>{{ _('Download Thunderbird Beta to try the newest features in the next version of Thunderbird! By giving us your feedback, you’ll help make email better for millions of your fellow users.') }}</h2>
+     <h2>{{ _('Download Thunderbird Beta to try the newest features! By giving us your feedback, you’ll help make email better for millions of your fellow users.') }}</h2>
    </header>
  
    <main role="main">
