Load JSON for holiday calendars.

--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -53,7 +53,7 @@
       <li>
         <img src="{{ static('img/calendar/holiday-icon.png') }}" alt="">
         <div class="itemtext">
-          <a href="/holidays/" class="title">{{ _('Holiday Calendars') }}</a>
+          <a href="holidays/" class="title">{{ _('Holiday Calendars') }}</a>
           <span class="desc">{{ _('Need a break? Now you know when!') }}</span>
         </div>
       </li>
