Change string on all download page.

--- a/website/thunderbird/all/index.html
+++ b/website/thunderbird/all/index.html
@@ -7,7 +7,7 @@
 
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
-{% block page_title %}{{ _('Download %s in your language')|format(channel_name) }}{% endblock %}
+{% block page_title %}{{ _('Download Thunderbird in your language') }}{% endblock %}
 {% block body_id %}thunderbird-all{% endblock %}
 
 {% block page_desc %}
