Fixed messing gettext braketing.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -49,18 +49,18 @@
                 </section>
                 <section>
                     <h3>{{ _('Getting Started') }}</h3>
-                    <p>{{ _('Read the') }} <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Introduction">{{ _('Developer Guide') }}</a> {{ _('on MDN. That will give you a general overview of the ecosystem Thunderbird is part of.') }}</p>
+                    <p>{{ _('Read the <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Introduction">Developer Guide</a> on MDN. That will give you a general overview of the ecosystem Thunderbird is part of.') }}</p>
                     <p>
-                        <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions/Simple_Thunderbird_build">{{ _('Simple Thunderbird build') }}</a> {{ _('on MDN is a good place to find how to get your first build completed.') }}
+                        {{ _('<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions/Simple_Thunderbird_build">Simple Thunderbird build</a> on MDN is a good place to find how to get your first build completed.') }}
                     </p>
                 </section>
                 <section>
                     <h3>{{ _('Bugs') }}</h3>
-                    <p>{{ _('All Thunderbird bugs live on') }} <a href="https://bugzilla.mozilla.org">{{ _('Mozilla\'s Bugzilla') }}</a>. {{ _('Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out these pre-defined searches to test the waters.') }} </p>
+                    <p>{{ _('All Thunderbird bugs live on <a href="https://bugzilla.mozilla.org">Mozilla\'s Bugzilla</a>. Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out these pre-defined searches to test the waters.') }}</p>
                     <ul>
-                        <li><a href="https://mzl.la/2oijxOd">{{ _('"Good first bugs"') }}</a> {{ _('which are extra easy.') }}</li>
-                        <li><a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1">{{ _('Mentored Bugs') }}</a> ') }}have a mentor who commits to helping you every step of the way.') }}</li>
-                        <li><a href="https://wiki.mozilla.org/Thunderbird:Bug_Queries">{{ _('Thunderbird bug queries') }}</a> {{ _('is a wiki page with lots of useful searches.') }}</li>
+                        <li>{{ _('<a href="https://mzl.la/2oijxOd">"Good first bugs"</a> which are extra easy.') }}</li>
+                        <li>{{ _('<a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1">Mentored Bugs</a> have a mentor who commits to helping you every step of the way.') }}</li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird:Bug_Queries">Thunderbird bug queries</a> is a wiki page with lots of useful searches.') }}</li>
                     </ul>
                 </section>
             </div>
@@ -134,7 +134,7 @@
         <div class="row">
             <div class="col full">
                 <section>
-                    <p>See <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization on MDN</a>.</p>
+                    {{ _('See <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization on MDN</a>.') }}
                 </section>
             </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="row">
             <div class="col full">
                 <section>
-                    <p>See <a href="https://wiki.mozilla.org/Thunderbird:Testing">the Mozilla Wiki page</a>.</p>
+                    {{ _('See <a href="https://wiki.mozilla.org/Thunderbird:Testing">the Mozilla Wiki page</a>.') }}
                 </section>
             </div>
         </div>
