Added Google Groups @Sancus mentioned.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -168,6 +168,7 @@
                         <li>{{ _('<a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support Forum</a>') }}</li>
                         <li>{{ _('<a href="https://discourse.mozilla.org/c/thunderbird">Thunderbird category on Mozilla\'s Discourse.</a>') }}</li>
                         <li>{{ _('<a href="http://forums.mozillazine.org/viewforum.php?f=29">Thunderbird Builds</a> on MozillaZine') }}</li>
+                        <li>{{ _('<a href="https://groups.google.com/forum/#!forum/mozilla.support.thunderbird">mozilla.support.thunderbird</a> is a Google Group for support.')}}</li>
                     </ul>
                 </section>
                 <section>
@@ -185,6 +186,7 @@
                     <h3>{{ _('Mailing Lists') }}</h3>
                     <ul>
                         <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a> - For high level topics.') }}</li>
+                        <li>{{ _('<a href="https://groups.google.com/forum/#!forum/tb-planning">tb-planning (Google Group)</a> - a mirror of <a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a>.') }}</li>
                         <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew">tb-support-crew</a> - For those who help the users.') }}</li>
                         <li>{{ _('<a href="https://mail.mozilla.org/listinfo/thunderbird-testers">thunderbird-testers</a> - For anyone who is helping test.') }}</li>
                         <li>{{ _('<a href="https://lists.mozilla.org/listinfo/dev-apps-thunderbird">dev-apps-thunderbird</a> - For add on related discussion.') }}</li>
