Change start page features link to thunderbird.net

--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -76,7 +76,7 @@
       <footer>
         <nav>
           <ul>
-            <li><a href="https://www.mozilla.org/thunderbird/features/">{{ _('Features') }}</a></li>
+            <li><a href="https://www.thunderbird.net/features/">{{ _('Features') }}</a></li>
             <li><a href="https://blog.mozilla.org/thunderbird/">{{ _('Visit our blog') }}</a></li>
             <li><a href="https://donate.mozilla.org/thunderbird/">{{ _('Donate') }}</a></li>
             <li><a href="https://wiki.mozilla.org/Thunderbird#Contributing">{{ _('Contribute') }}</a></li>
